add styles to pigLatin page

--- a/employees/index.html
+++ b/employees/index.html
@@ -31,7 +31,7 @@
           <p class="py-2">
             Note: All records will be displayed if textbox is empty.
           </p>
-          <form action="" class="py-2 flex flex-col">
+          <form class="py-2 flex flex-col">
             <div class="flex flex-col">
               <label for="employee" class="mb-4"
                 >Enter employee id, lastname or level:</label
