add styles for table using tailwind

--- a/employees/index.html
+++ b/employees/index.html
@@ -95,8 +95,23 @@
       </section>
       <!-- Results -->
       <section class="px-3 py-5 max-w-md my-0 m-auto">
-        <p>Search result:</p>
-        <article id="results"></article>
+        <p>Search Results:</p>
+        <div class="relative overflow-x-auto rounded-lg">
+          <table class="w-full text-left">
+            <thead class="text-sm uppercase">
+              <tr>
+                <th scope="col" class="border border-collapse px-2 py-1">ID</th>
+                <th scope="col" class="border border-collapse px-2 py-1">Firstname</th>
+                <th scope="col" class="border border-collapse px-2 py-1">Lastname</th>
+                <th scope="col" class="border border-collapse px-2 py-1">Salary</th>
+                <th scope="col" class="border border-collapse px-2 py-1">Level</th>
+              </tr>
+            </thead>
+            <tbody id="results">
+             
+            </tbody>
+          </table>
+        </div>
       </section>
     </main>
   </body>
