--- a/employees/index.html
+++ b/employees/index.html
@@ -49,7 +49,7 @@
           </form>
         </article>
         <!-- Add -->
-        <!-- <article class="px-3 py-2 rounded-md bg-[#F2F2F2] text-sm">
+        <article class="px-3 py-2 rounded-md bg-[#F2F2F2] text-sm hidden">
           <p class="py-2">
             Please enter employee details below. All fields are required.
           </p>
@@ -91,7 +91,7 @@
               Add
             </button>
           </form>
-        </article> -->
+        </article>
       </section>
       <!-- Results -->
       <section class="px-3 py-5 max-w-md my-0 m-auto">
@@ -107,9 +107,7 @@
                 <th scope="col" class="border border-collapse px-2 py-1">Level</th>
               </tr>
             </thead>
-            <tbody id="results">
-             
-            </tbody>
+            <tbody id="results"></tbody>
           </table>
         </div>
       </section>
